# membrane

./: CMakeLists.txt  Makefile  README.md
include/: commands.hpp  console.hpp  crypto.hpp  membrane.hpp  utils.hpp
src/: commands.cc  commands.hpp  console.cc  console.hpp  crypto.cc  crypto.hpp  main.cc  membrane.cc  membrane.hpp  utils.cc
